--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css && hugo --minify"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.4",
+    "@tailwindcss/typography": "^0.5.4"
+  },
+  "dependencies": {
     "autoprefixer": "^10.4.13",
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.6.0",
     "postcss": "^8.4.21",
-    "postcss-cli": "^10.0.0",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4",
-    "vite": "^4.1.0"
+    "vite": "^4.1.1"
   }
 }
