--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "watch:hugo": "hugo server",
     "build": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css && hugo --minify"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.4"
-  },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.21",
